New database migrated

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,22 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/name"
-        android:hint="@string/field_name"/>
+        android:id="@+id/first_name"
+        android:hint="@string/field_first_name"/>
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/last_name"
+        android:layout_below="@id/first_name"
+        android:hint="@string/field_last_name"/>
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/submit"
         android:text="@string/button_submit"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/last_name"
         android:layout_marginBottom="20dp"/>
 
     <ListView
